refactor: uri 수정 (#72)
